@@ -1,6 +1,8 @@
 package com.innteam.buildup.commons.model.roadFolders;
 
 import com.innteam.buildup.commons.model.paper.Paper;
+import java.util.ArrayList;
+import java.util.Collections;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -22,13 +24,16 @@ public class RoadFolderCrudServiceTest {
 
     @Test
     public void test() {
-        final RoadFolder roadFolder1 = new RoadFolder("SE", List.of(new Paper("sePaper", "https://github.com/se-edu/se-book", 100000)), List.of());
-        final RoadFolder roadFolder2 = new RoadFolder("DB", List.of(new Paper("dbPaper", "https://bookauthority.org/books/best-databases-books", 100000)), List.of());
-        final RoadFolder roadFolder = new RoadFolder("Java", List.of(
+        final RoadFolder roadFolder1 = new RoadFolder("SE", Collections.singletonList(new Paper("sePaper", "https://github.com/se-edu/se-book", 100000)), Collections.emptyList());
+        final RoadFolder roadFolder2 = new RoadFolder("DB", Collections.singletonList(new Paper("dbPaper", "https://bookauthority.org/books/best-databases-books", 100000)), Collections.emptyList());
+        ArrayList<RoadFolder> roadFolders = new ArrayList<>();
+        roadFolders.add(roadFolder1);
+        roadFolders.add(roadFolder2);
+        final RoadFolder roadFolder = new RoadFolder("Java", Collections.singletonList(
                 new Paper("javaPaper",
                         "https://github.com/muhdkhokhar/test/blob/master/Joshua%20Bloch%20-%20Effective%20Java%20(3rd)%20-%202018.pdf",
                         100000)),
-                java.util.List.of(roadFolder1, roadFolder2));
+                roadFolders);
         final UUID uuid = service.create(roadFolder);
 
         final RoadFolder folder = service.read(uuid);
